@@ -1,29 +1,37 @@
 package in.zeta.microloan.platform.service;
 
+import in.zeta.microloan.platform.dto.request.LoanIssuanceRequestDTO;
 import in.zeta.microloan.platform.dto.response.LoanResponseDTO;
 import in.zeta.microloan.platform.dto.response.LoanDetailResponseDTO;
-import in.zeta.microloan.platform.dto.request.LoanIssuanceRequestDTO;
-import in.zeta.microloan.platform.exception.BusinessRuleException;
 import in.zeta.microloan.platform.exception.ResourceNotFoundException;
 import in.zeta.microloan.platform.model.*;
 import in.zeta.microloan.platform.model.enums.*;
 import in.zeta.microloan.platform.repository.borrower.BorrowerRepository;
 import in.zeta.microloan.platform.repository.household.HouseholdRepository;
 import in.zeta.microloan.platform.repository.loan.LoanRepository;
-import in.zeta.microloan.platform.repository.loanproduct.LoanProductRepository;
 import in.zeta.microloan.platform.repository.loanapplication.LoanApplicationRepository;
+import in.zeta.microloan.platform.repository.loanproduct.LoanProductRepository;
+import in.zeta.microloan.platform.service.mappers.LoanMapper;
+import in.zeta.microloan.platform.service.validator.LoanValidator;
+import in.zeta.spectra.capture.SpectraLogger;
+import olympus.trace.OlympusSpectra;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.*;
+
+import static in.zeta.microloan.platform.constants.LogConstants.*;
+import static in.zeta.microloan.platform.constants.LogConstants.COUNT;
+import static in.zeta.microloan.platform.exception.Error.*;
+import static in.zeta.microloan.platform.exception.Error.LOAN_NOT_FOUND;
 
 @Service
 public class LoanService {
+
+    private static final SpectraLogger log = OlympusSpectra.getLogger(LoanService.class);
 
     private final LoanRepository loanRepository;
     private final LoanProductRepository productRepository;
@@ -32,13 +40,18 @@ public class LoanService {
     private final LoanApplicationRepository applicationRepository;
     private final RepaymentScheduleService scheduleService;
     private final AtroposEventPublisherService atroposEventPublisher;
+    private final LoanValidator loanValidator;
+    private final LoanMapper loanMapper;
 
     public LoanService(LoanRepository loanRepository,
                        LoanProductRepository productRepository,
                        BorrowerRepository borrowerRepository,
                        HouseholdRepository householdRepository,
                        LoanApplicationRepository applicationRepository,
-                       RepaymentScheduleService scheduleService, AtroposEventPublisherService atroposEventPublisher) {
+                       RepaymentScheduleService scheduleService,
+                       AtroposEventPublisherService atroposEventPublisher,
+                       LoanValidator loanValidator,
+                       LoanMapper loanMapper) {
         this.loanRepository = loanRepository;
         this.productRepository = productRepository;
         this.borrowerRepository = borrowerRepository;
@@ -46,110 +59,46 @@ public class LoanService {
         this.applicationRepository = applicationRepository;
         this.scheduleService = scheduleService;
         this.atroposEventPublisher = atroposEventPublisher;
+        this.loanValidator = loanValidator;
+        this.loanMapper = loanMapper;
     }
 
     @Transactional
     public LoanResponseDTO createLoan(LoanIssuanceRequestDTO dto, Long createdBy) {
-        // Validate loan application if provided
+        log.info("LOAN_CREATE_ATTEMPT")
+                .attr("borrowerId", dto.getBorrowerId())
+                .attr("productId", dto.getProductId())
+                .attr("principalAmount", dto.getPrincipalAmount())
+                .attr("applicationId", dto.getApplicationId())
+                .attr("createdBy", createdBy)
+                .log();
+
+        LoanApplication application = null;
         if (dto.getApplicationId() != null) {
-            LoanApplication application = applicationRepository.findById(dto.getApplicationId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Loan application not found"));
-
-            // Check if application is approved
-            if (application.getStatus() != LoanApplicationStatus.APPROVED) {
-                throw new BusinessRuleException(
-                        "Loan can only be created for APPROVED applications. Current status: " +
-                                application.getStatus());
-            }
-
-            // Check if application has expired
-            if (LocalDateTime.now().isAfter(application.getExpiresAt())) {
-                throw new BusinessRuleException("Loan application has expired");
-            }
-
-            // Check if loan already exists for this application
+            application = applicationRepository.findById(dto.getApplicationId())
+                    .orElseThrow(() -> new ResourceNotFoundException(LOAN_APPLICATION_NOT_FOUND));
             if (loanRepository.existsByApplicationId(dto.getApplicationId())) {
-                throw new BusinessRuleException("Loan already exists for this application");
-            }
-
-            // Validate that the principal amount matches approved amount
-            if (application.getApprovedAmount() != null &&
-                    dto.getPrincipalAmount().compareTo(application.getApprovedAmount()) != 0) {
-                throw new BusinessRuleException(
-                        String.format("Principal amount ₹%s does not match approved amount ₹%s",
-                                dto.getPrincipalAmount(), application.getApprovedAmount()));
-            }
-
-            // Validate borrower matches
-            if (!application.getBorrowerId().equals(dto.getBorrowerId())) {
-                throw new BusinessRuleException("Borrower ID does not match the loan application");
-            }
-
-            // Validate product matches
-            if (!application.getProductId().equals(dto.getProductId())) {
-                throw new BusinessRuleException("Product ID does not match the loan application");
+                throw new RuntimeException("Loan already exists for this application");
             }
         }
 
         LoanProduct product = productRepository.findById(dto.getProductId())
-                .orElseThrow(() -> new ResourceNotFoundException("Loan product not found"));
-
-        // Validate product is active
-        if (!"ACTIVE".equals(product.getStatus().name())) {
-            throw new BusinessRuleException("Cannot create loan for inactive product");
-        }
-
+                .orElseThrow(() -> new ResourceNotFoundException(LOAN_PRODUCT_NOT_FOUND));
         Borrower borrower = borrowerRepository.findById(dto.getBorrowerId())
-                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(BORROWER_NOT_FOUND));
 
-        // Validate borrower is verified
-        if (!borrower.getIsVerified()) {
-            throw new BusinessRuleException("Borrower must be verified before loan disbursement");
-        }
-
-        // Validate borrower is active
-        if (borrower.getStatus() != UserStatus.ACTIVE) {
-            throw new BusinessRuleException("Borrower status must be ACTIVE. Current status: " +
-                    borrower.getStatus());
-        }
-
-        // Validate amount is within product limits
-        if (dto.getPrincipalAmount().compareTo(product.getMinAmount()) < 0 ||
-                dto.getPrincipalAmount().compareTo(product.getMaxAmount()) > 0) {
-            throw new BusinessRuleException(
-                    String.format("Loan amount must be between ₹%s and ₹%s",
-                            product.getMinAmount(), product.getMaxAmount()));
-        }
-
-        // Validate tenure
-        if (dto.getTenureMonths() > product.getTenureMonths()) {
-            throw new BusinessRuleException(
-                    String.format("Tenure cannot exceed %d months for this product",
-                            product.getTenureMonths()));
-        }
+        loanValidator.validateCreate(dto, application, product, borrower);
 
         BigDecimal emiAmount = EMICalculator.calculateEMI(
-                dto.getPrincipalAmount(),
-                dto.getInterestRate(),
-                dto.getTenureMonths()
-        );
-
+                dto.getPrincipalAmount(), dto.getInterestRate(), dto.getTenureMonths());
         BigDecimal processingFee = calculateProcessingFee(dto.getPrincipalAmount(), product);
-
-        BigDecimal totalInterest = EMICalculator.calculateTotalInterest(
-                emiAmount,
-                dto.getTenureMonths(),
-                dto.getPrincipalAmount()
-        );
-
+        BigDecimal totalInterest = EMICalculator.calculateTotalInterest(emiAmount, dto.getTenureMonths(), dto.getPrincipalAmount());
         BigDecimal totalPayable = dto.getPrincipalAmount().add(totalInterest);
 
         BigDecimal householdIncome = null;
         if (borrower.getHouseholdId() != null) {
-            Household household = householdRepository.findById(borrower.getHouseholdId()).orElse(null);
-            if (household != null) {
-                householdIncome = household.getTotalAnnualIncome();
-            }
+            Household h = householdRepository.findById(borrower.getHouseholdId()).orElse(null);
+            if (h != null) householdIncome = h.getTotalAnnualIncome();
         }
 
         Loan loan = Loan.builder()
@@ -179,151 +128,107 @@ public class LoanService {
                 .createdBy(createdBy)
                 .build();
 
-        Long loanId = loanRepository.create(loan);
+        UUID loanId = loanRepository.create(loan);
         loan.setId(loanId);
 
-        // Generate repayment schedule
         scheduleService.generateSchedule(loanId, dto.getPrincipalAmount(), dto.getInterestRate(),
                 dto.getTenureMonths(), emiAmount, dto.getFirstDueDate());
 
-        // Update application status to DISBURSED if application exists
-        if (dto.getApplicationId() != null) {
-            applicationRepository.updateStatus(dto.getApplicationId(), LoanApplicationStatus.DISBURSED);
+        if (application != null) {
+            applicationRepository.updateStatus(application.getId(), LoanApplicationStatus.DISBURSED);
         }
 
-        // Publish event
         atroposEventPublisher.publishLoanIssuedEvent(loan);
 
-        // Fetch the loan again to get the timestamps
-        return loanRepository.findById(loanId)
-                .map(this::mapToResponseDTO)
-                .orElse(mapToResponseDTO(loan));
+        LoanResponseDTO response = loanRepository.findById(loanId)
+                .map(loanMapper::toResponse)
+                .orElse(loanMapper.toResponse(loan));
+
+        log.info("LOAN_CREATE_SUCCESS")
+                .attr(LOAN_ID, response.getId())
+                .attr("loanNumber", response.getLoanNumber())
+                .attr("emiAmount", response.getEmiAmount())
+                .log();
+        return response;
     }
 
-    public LoanResponseDTO getLoanById(Long id) {
+    public LoanResponseDTO getLoanById(UUID id) {
+        log.info("LOAN_FETCH_BY_ID_ATTEMPT").attr(LOAN_ID, id).log();
         Loan loan = loanRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Loan not found"));
-        return mapToResponseDTO(loan);
+                .orElseThrow(() -> new ResourceNotFoundException(LOAN_NOT_FOUND));
+        log.info("LOAN_FETCH_BY_ID_SUCCESS").attr(LOAN_ID, id).log();
+        return loanMapper.toResponse(loan);
     }
 
-    public LoanDetailResponseDTO getLoanDetails(Long id) {
+    public LoanDetailResponseDTO getLoanDetails(UUID id) {
+        log.info("LOAN_DETAILS_FETCH_ATTEMPT").attr(LOAN_ID, id).log();
         Loan loan = loanRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Loan not found"));
-
+                .orElseThrow(() -> new ResourceNotFoundException(LOAN_NOT_FOUND));
         Borrower borrower = borrowerRepository.findById(loan.getBorrowerId())
-                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
-
-        return LoanDetailResponseDTO.builder()
-                .id(loan.getId())
-                .loanNumber(loan.getLoanNumber())
-                .borrowerId(borrower.getId())
-                .borrowerName(borrower.getName())
-                .borrowerPhone(borrower.getPhone())
-                .principalAmount(loan.getPrincipalAmount())
-                .interestRate(loan.getInterestRate())
-                .tenureMonths(loan.getTenureMonths())
-                .emiAmount(loan.getEmiAmount())
-                .totalPayable(loan.getTotalPayable())
-                .outstandingPrincipal(loan.getOutstandingPrincipal())
-                .outstandingInterest(loan.getOutstandingInterest())
-                .totalOutstanding(loan.getTotalOutstanding())
-                .totalPaid(loan.getTotalPaid())
-                .disbursementDate(loan.getDisbursementDate())
-                .firstDueDate(loan.getFirstDueDate())
-                .lastPaymentDate(loan.getLastPaymentDate())
-                .status(loan.getStatus())
-                .createdAt(loan.getCreatedAt())
-                .build();
+                .orElseThrow(() -> new ResourceNotFoundException(BORROWER_NOT_FOUND));
+        log.info("LOAN_DETAILS_FETCH_SUCCESS").attr(LOAN_ID, id).log();
+        return loanMapper.toDetail(loan, borrower);
     }
 
-    public List<LoanResponseDTO> getLoansByBorrower(Long borrowerId) {
-        // Validate borrower exists
+    public List<LoanResponseDTO> getLoansByBorrower(UUID borrowerId) {
         borrowerRepository.findById(borrowerId)
-                .orElseThrow(() -> new ResourceNotFoundException("Borrower not found"));
-
-        List<Loan> loans = loanRepository.findByBorrowerId(borrowerId);
-        return loans.stream()
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .orElseThrow(() -> new ResourceNotFoundException(BORROWER_NOT_FOUND));
+        List<LoanResponseDTO> result = loanRepository.findByBorrowerId(borrowerId).stream()
+                .map(loanMapper::toResponse).toList();
+        log.info("LOANS_BY_BORROWER_SUCCESS").attr("borrowerId", borrowerId).attr(COUNT, result.size()).log();
+        return result;
     }
 
-    public List<LoanResponseDTO> getLoansByHousehold(Long householdId) {
-        // Validate household exists
+    public List<LoanResponseDTO> getLoansByHousehold(UUID householdId) {
         householdRepository.findById(householdId)
-                .orElseThrow(() -> new ResourceNotFoundException("Household not found"));
-
-        List<Loan> loans = loanRepository.findByHouseholdId(householdId);
-        return loans.stream()
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .orElseThrow(() -> new ResourceNotFoundException(HOUSEHOLD_NOT_FOUND));
+        List<LoanResponseDTO> result = loanRepository.findByHouseholdId(householdId).stream()
+                .map(loanMapper::toResponse).toList();
+        log.info("LOANS_BY_HOUSEHOLD_SUCCESS").attr("householdId", householdId).attr(COUNT, result.size()).log();
+        return result;
     }
 
     public List<LoanResponseDTO> getLoansByStatus(String status, int page, int limit) {
-        try {
-            LoanStatus.valueOf(status.toUpperCase());
-        } catch (IllegalArgumentException e) {
-            throw new BusinessRuleException("Invalid loan status: " + status);
-        }
-
-        List<Loan> loans = loanRepository.findByStatus(status.toUpperCase());
-        return loans.stream()
-                .skip((page - 1) * limit)
+        log.info("LOANS_BY_STATUS_ATTEMPT").attr(STATUS, status).attr("page", page).attr("limit", limit).log();
+        LoanStatus.valueOf(status.toUpperCase());
+        List<LoanResponseDTO> result = loanRepository.findByStatus(status.toUpperCase()).stream()
+                .skip((long) (page - 1) * limit)
                 .limit(limit)
-                .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .map(loanMapper::toResponse)
+                .toList();
+        log.info("LOANS_BY_STATUS_SUCCESS").attr(STATUS, status).attr(COUNT, result.size()).log();
+        return result;
     }
 
     @Transactional
-    public void cancelLoan(Long id, String reason) {
+    public void cancelLoan(UUID id, String reason) {
+        log.info("LOAN_CANCEL_ATTEMPT").attr(LOAN_ID, id).attr("reason", reason).log();
         Loan loan = loanRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Loan not found"));
-
-        if (!"ACTIVE".equals(loan.getStatus().name()) && !"DISBURSED".equals(loan.getStatus().name())) {
-            throw new BusinessRuleException("Only active or disbursed loans can be cancelled");
+                .orElseThrow(() -> new ResourceNotFoundException(LOAN_NOT_FOUND));
+        if (!(loan.getStatus() == LoanStatus.ACTIVE || loan.getStatus() == LoanStatus.DISBURSED)) {
+            log.warn("LOAN_CANCEL_STATUS_INVALID").attr(LOAN_ID, id).attr(STATUS, loan.getStatus().name()).log();
+            throw new RuntimeException("Only active or disbursed loans can be cancelled");
         }
-
-        // Check if any payments have been made
         if (loan.getTotalPaid().compareTo(BigDecimal.ZERO) > 0) {
-            throw new BusinessRuleException("Cannot cancel loan with payments already made");
+            log.warn("LOAN_CANCEL_HAS_PAYMENTS").attr(LOAN_ID, id).attr("totalPaid", loan.getTotalPaid()).log();
+            throw new RuntimeException("Cannot cancel loan with payments already made");
         }
-
         loanRepository.updateStatus(id, "CANCELLED");
-
         atroposEventPublisher.publishLoanCancelledEvent(loan, reason);
+        log.info("LOAN_CANCEL_SUCCESS").attr(LOAN_ID, id).log();
     }
 
     private BigDecimal calculateProcessingFee(BigDecimal principalAmount, LoanProduct product) {
         if ("PERCENTAGE".equals(product.getProcessingFeeType())) {
             return principalAmount.multiply(product.getProcessingFeeValue())
                     .divide(BigDecimal.valueOf(100), 2, java.math.RoundingMode.HALF_UP);
-        } else {
-            return product.getProcessingFeeValue();
         }
+        return product.getProcessingFeeValue();
     }
 
     private String generateLoanNumber() {
         String year = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy"));
-        String randomPart = String.format("%06d", new Random().nextInt(999999));
-        return "LN-" + year + "-" + randomPart;
-    }
-
-    private LoanResponseDTO mapToResponseDTO(Loan loan) {
-        return LoanResponseDTO.builder()
-                .id(loan.getId())
-                .loanNumber(loan.getLoanNumber())
-                .borrowerId(loan.getBorrowerId())
-                .householdId(loan.getHouseholdId())
-                .principalAmount(loan.getPrincipalAmount())
-                .interestRate(loan.getInterestRate())
-                .tenureMonths(loan.getTenureMonths())
-                .emiAmount(loan.getEmiAmount())
-                .totalPayable(loan.getTotalPayable())
-                .totalOutstanding(loan.getTotalOutstanding())
-                .totalPaid(loan.getTotalPaid())
-                .disbursementDate(loan.getDisbursementDate())
-                .firstDueDate(loan.getFirstDueDate())
-                .status(loan.getStatus())
-                .createdAt(loan.getCreatedAt())
-                .build();
+        String rand = String.format("%06d", new Random().nextInt(999999));
+        return "LN-" + year + "-" + rand;
     }
 }
